// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu.vue should render dropdown with slots 1`] = `
<div
  class="hue-dropdown-panel hue-dropdown-menu"
>
  <button
    class="hue-btn"
    type="button"
  >
    
     
    <i
      class="fa fa-caret-down"
    />
  </button>
   
  <div
    class="hue-dropdown-container"
  >
    <div
      class="hue-dropdown-inner"
    >
      <div
        class="hue-dropdown-menu-inner"
      >
        <ul>
          <div>
            Some item
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu.vue should render empty dropdown 1`] = `
<div
  class="hue-dropdown-panel hue-dropdown-menu"
>
  <button
    class="hue-btn"
    type="button"
  >
    
     
    <i
      class="fa fa-caret-down"
    />
  </button>
   
  <div
    class="hue-dropdown-container"
  >
    <div
      class="hue-dropdown-inner"
    >
      <div
        class="hue-dropdown-menu-inner"
      >
        <ul />
      </div>
    </div>
  </div>
</div>
`;
